--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
 <h3><b>Hakkımda</b></h3>
 <p>Merhaba. Ben Büşra Kandemir! Ankara'da yaşıyorum. Fantastik filmler izlemeyi ve kitaplar okumayı çok seviyorum. Tam bir Spiderwick hayranıyım! Web geliştirme ile ilgileniyorum. Kodluyoruz'un bu eğitimi sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum! Siz de aramıza katılın!</p>
 <!--kendimle ilgili kısa bilgi-->
+<h3><b>İlgi Alanlarım</b></h3>
+    <ol>
+        <li>Film
+            <ul>
+                <li><a href="https://www.imdb.com/title/tt0457939/">The Holiday</a></li>
+                <li>Oblivion</li>
+                <li>Spiderwick Günceleri</li>
+            </ul>
+        </li>
+        <li>Dizi
+            <ul>
+                <li><a href="https://www.imdb.com/title/tt4834206/">A Series of Unfortunate Events</a></li>
+                <li>The Handmaid's Tale</li>
+                <li>Fringe</li>
+            </ul>
+        </li>
+        <li>Kitap
+            <ul>
+                <li><a href="https://www.goodreads.com/book/show/44767458-dune">Dune</a></li>
+                <li>Bir Mars Destanı</li>
+                <li>Yerdeniz Büyücüsü</li>
+            </ul>
+        </li>
+    </ol>
 <h2><b>Sevdiğim Filmler</b></h2>
 <h3><b>Spiderwick Günceleri</b></h3>
+<img src="https://1.bp.blogspot.com/-6NtwZ3ebMw8/XO2mKMwBYQI/AAAAAAAAQrg/ZvSGFuzFBhM-OORpsmYEQ9vqExK2lirgACLcBGAs/s1600/690x0w%2B%25281%2529.jpg" alt="">
 <p>Spiderwick Günceleri, Holly Black ve Tony DiTerlizzi'nin aynı adlı kitap serisine dayanan 2008 Amerikan fantastik filmidir. Mark Waters tarafından yönetilmiştir ve başrollerde Freddie Highmore, Sarah Bolger gibi isimler yer almaktadır.</p>
 <p>Filmde Simon, Jared ve Mallory kardeşler, anneleriyle birlikte harabe bir eve taşınırlar. Burada tesadüfen ellerine geçen bir günlüğün kapağını açar açmaz tüm yaşamları değişecektir. Çünkü fantazmatik bir evrenin kapısını aralamışlardır. Bu sıradışı dünyanın girdaplarına kapılan kardeşler kendilerini tuhaf mahluklarla dolu yeni bir dünyada bulurlar. Fantastik çocuk edebiyatının ünlü serilerinden The Spiderwick Chronicles, maceralarını kitap sayfalarından beyazperdeye taşıyan örneklere bir yenisini ekliyor.</p>
